<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activities.SettingsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:title="@string/lbl_settings"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/daily_journey"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/settings_rg_journey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <RadioButton
                android:id="@+id/settings_rb_op8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="8"
                android:text="@string/daily_journey_8" />

            <RadioButton
                android:id="@+id/settings_rb_op6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="6"
                android:text="@string/daily_journey_6" />

            <RadioButton
                android:id="@+id/settings_rb_op4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="4"
                android:text="@string/daily_journey_4" />

        </RadioGroup>

    </LinearLayout>

</LinearLayout>

